--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cached_network_image: ^3.4.1
   hive_flutter: ^1.1.0
   hive: ^2.2.3
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
